[gd_scene load_steps=11 format=3 uid="uid://b1uktgwiv1phb"]

[ext_resource type="Script" path="res://main_2.gd" id="1_8qep2"]
[ext_resource type="PackedScene" uid="uid://c73cbcp8jxkot" path="res://ball.tscn" id="2_q7h1a"]
[ext_resource type="PackedScene" uid="uid://11ilo2sa8b8u" path="res://p_1.tscn" id="3_bbnoi"]
[ext_resource type="PackedScene" uid="uid://b7ps4gc1bjaiy" path="res://p_2.tscn" id="4_ymgji"]
[ext_resource type="PackedScene" uid="uid://d08ankp6yocss" path="res://p_4.tscn" id="5_wn8xq"]
[ext_resource type="PackedScene" uid="uid://ow05gjdb4asf" path="res://p_3.tscn" id="6_plr3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idn7l"]
size = Vector2(1174, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87i5j"]
size = Vector2(38.5, 1301)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdalr"]
size = Vector2(169, 164)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_n7rd2"]
size = Vector2(100, 100)

[node name="Main2" type="Node2D"]
script = ExtResource("1_8qep2")

[node name="Roof" type="Area2D" parent="."]
position = Vector2(0, -47.94)
scale = Vector2(1.395, 1.395)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roof"]
position = Vector2(401.434, 0)
shape = SubResource("RectangleShape2D_idn7l")

[node name="Floor" type="Area2D" parent="."]
position = Vector2(0, 649)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(577, 529)
scale = Vector2(1.325, 1)
shape = SubResource("RectangleShape2D_idn7l")

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-43, 573)
shape = SubResource("RectangleShape2D_87i5j")

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(1201, 562)
shape = SubResource("RectangleShape2D_87i5j")

[node name="Ball" parent="." instance=ExtResource("2_q7h1a")]
position = Vector2(586, 555)

[node name="P1" parent="." instance=ExtResource("3_bbnoi")]
position = Vector2(78, 604)

[node name="P2" parent="." instance=ExtResource("4_ymgji")]
position = Vector2(1082, 632)

[node name="P4" parent="." instance=ExtResource("5_wn8xq")]
position = Vector2(577, 1071)

[node name="P3" parent="." instance=ExtResource("6_plr3y")]
position = Vector2(565, 51)

[node name="Corrnors" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corrnors"]
position = Vector2(74.5, 72)
shape = SubResource("RectangleShape2D_kdalr")

[node name="Sprite2D" type="Sprite2D" parent="Corrnors/CollisionShape2D"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-0.499994, -1.90735e-06)
scale = Vector2(1.7, 1.66)
texture = SubResource("PlaceholderTexture2D_n7rd2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Corrnors"]
position = Vector2(1080, 72)
shape = SubResource("RectangleShape2D_kdalr")

[node name="Sprite2D" type="Sprite2D" parent="Corrnors/CollisionShape2D2"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-0.499994, -1.90735e-06)
scale = Vector2(1.7, 1.66)
texture = SubResource("PlaceholderTexture2D_n7rd2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Corrnors"]
position = Vector2(74.5, 1038)
shape = SubResource("RectangleShape2D_kdalr")

[node name="Sprite2D" type="Sprite2D" parent="Corrnors/CollisionShape2D3"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-0.499994, -1.90735e-06)
scale = Vector2(1.7, 1.66)
texture = SubResource("PlaceholderTexture2D_n7rd2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Corrnors"]
position = Vector2(1080, 1038)
shape = SubResource("RectangleShape2D_kdalr")

[node name="Sprite2D" type="Sprite2D" parent="Corrnors/CollisionShape2D4"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-0.499994, -1.90735e-06)
scale = Vector2(1.7, 1.66)
texture = SubResource("PlaceholderTexture2D_n7rd2")

[node name="Label" type="Label" parent="."]
offset_left = 40.0
offset_top = 32.0
offset_right = 141.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 50
text = "P1:0"

[node name="Label2" type="Label" parent="."]
offset_left = 1011.0
offset_top = 1002.0
offset_right = 1113.0
offset_bottom = 1071.0
theme_override_font_sizes/font_size = 50
text = "P2:0"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="."]
offset_left = 1011.0
offset_top = 35.0
offset_right = 1113.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 50
text = "P3:0"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="."]
offset_left = 40.0
offset_top = 1013.0
offset_right = 142.0
offset_bottom = 1082.0
theme_override_font_sizes/font_size = 50
text = "P4:0"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(580, 551)
zoom = Vector2(1, 0.585)

[connection signal="body_entered" from="Roof" to="." method="_on_roof_body_entered"]
[connection signal="body_entered" from="Floor" to="." method="_on_floor_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
